# coding-interview-prep

./: .gitignore  README.md
algorithms/lc/: .gitignore  README.md  package-lock.json  package.json  prettier.config.cjs  pyproject.toml  tsconfig.json
algorithms/lc/scripts/: generate.py  update_readme.py
algorithms/lc/src/0001-two-sum/: README.md  solution.test.ts
algorithms/lc/src/0021-merge-two-sorted-lists/: README.md  solution.test.ts  solution.ts
algorithms/lc/src/0125-valid-palindrome/: README.md  solution.test.ts  solution.ts
algorithms/lc/src/datastructures/: list_node.py
algorithms/lc/src/solutions/0001-two-sum/: solution.py
algorithms/lc/src/solutions/0021-merge-two-sorted-lists/: solution.py
algorithms/lc/src/solutions/0125-valid-palindrome/: solution.py
algorithms/lc/src/utils/: list-node.ts
